# pytest-doctestplus

./: .coveragerc  .gitignore  .mailmap  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.rst  appveyor.yml  conftest.py  pytest_doctestplus.py  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: main.yml  publish.yml  python-tests.yml
licenses/: README.rst
plugins/: doctestplus.py
pytest_doctestplus/: __init__.py  newhooks.py  output_checker.py  plugin.py  skipping.py  utils.py
pytest_doctestplus/sphinx/: doctestplus.py
tests/: conf.py  conftest.py  index.rst  test_doctest_ufunc.py  test_doctestplus.py  test_encoding.py  test_makepyfile.py  test_output_checker.py  test_plugin.py  test_utils.py
tests/docs/: remotedata_all.rst  requires_all.rst  skip_all.rst  skip_all.tex  skip_some.rst  skip_some.tex  skip_some_remote_data.rst
tests/python/: doctests.py  skip_doctests.py
tests/ufunc_example/: _module2.c  module1.py  module2.py  setup.py
