[metadata]
name = pytest-doctestplus
url = https://github.com/astropy/pytest-doctestplus
author = The Astropy Developers
author_email = astropy.team@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Testing
    Topic :: Utilities
license = BSD
description = Pytest plugin with advanced doctest features.
long_description = file: README.rst
keywords = doctest, rst, pytest, py.test

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    pytest>=4.6
    setuptools>=30.3.0

[options.entry_points]
pytest11 =
    pytest_doctestplus = pytest_doctestplus.plugin

[options.packages.find]
exclude =
    tests

[tool:pytest]
minversion = 4.6
testpaths = tests pytest_doctestplus
xfail_strict=true
filterwarnings =
    error
    ignore:file format.*:UserWarning
    ignore:.*non-empty pattern match.*:FutureWarning

[flake8]
max-line-length = 100
