[metadata]
name = pytest-doctestplus
url = https://github.com/scientific-python/pytest-doctestplus
author = Scientific Python Developers
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Testing
    Topic :: Utilities
license = BSD
description = Pytest plugin with advanced doctest features.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = doctest, rst, pytest, py.test

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    pytest>=4.6
    setuptools>=30.3.0
    packaging>=17.0

[options.extras_require]
test =
    numpy
    pytest-remotedata>=0.3.2
    sphinx

[options.entry_points]
pytest11 =
    pytest_doctestplus = pytest_doctestplus.plugin

[options.packages.find]
exclude =
    tests

[tool:pytest]
minversion = 4.6
testpaths = tests pytest_doctestplus
xfail_strict=true
filterwarnings =
    error
    ignore:file format.*:UserWarning
    ignore:.*non-empty pattern match.*:FutureWarning

[flake8]
max-line-length = 100
